manifests/4_gke_ingress/envoy-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: envoy
  annotations:
    cloud.google.com/neg: '{"envoy": {"443":{}}}'
    cloud.google.com/app-protocols: '{"envoy": "HTTP2"}'
spec:
  type: NodePort
  selector:
    app: envoy
  ports:
    - name: envoy
      protocol: TCP
      port: 443
      targetPort: 443
