manifests/4_gke_ingress/server1-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server1
spec:
  replicas: 3
  selector:
    matchLabels:
      app: server1
  template:
    metadata:
      labels:
        app: server1
    spec:
      containers:
        - name: server
          image: 74th/try-envoy-server:latest
          ports:
            - containerPort: 50000
          command:
            - ./server
            - -H
            - :50000
          readinessProbe:
            tcpSocket:
              port: 50000
          resources:
            requests:
              cpu: "100m"
              memory: "100M"
            limits:
              cpu: "1"
              memory: "1G"
          imagePullPolicy: Always
