manifests/4_gke_ingress/server1-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: server1
spec:
  selector:
    app: server1
  type: ClusterIP
  clusterIP: None
  ports:
    - name: server1
      protocol: TCP
      port: 443
